--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-easy-swipe": "^0.0.23",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
